[tool.poetry]
name = "se"
version = "0.1.0"
description = ""
authors = ["MS <alstjq1012@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.2.0"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
lxml = "^4.9.2"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
